@@ -55,6 +55,8 @@ EVENT_UN_REACH = "UNREACH"
 EVENT_SEQUENCE_OK = "SEQUENCE_OK"
 
 PARAM_CHANNEL_OPERATION_MODE = "CHANNEL_OPERATION_MODE"
+PARAM_TEMPERATURE_MAXIMUM = "TEMPERATURE_MAXIMUM"
+PARAM_TEMPERATURE_MINIMUM = "TEMPERATURE_MINIMUM"
 
 CONFIGURABLE_CHANNEL: set[str] = {"MULTI_MODE_INPUT_TRANSMITTER", "KEY_TRANSCEIVER"}
 
