@@ -24,6 +24,8 @@ from hahomematic.devices.entity_definition import (
     FIELD_SETPOINT,
     FIELD_STATE,
     FIELD_TEMPERATURE,
+    FIELD_TEMPERATURE_MAXIMUM,
+    FIELD_TEMPERATURE_MINIMUM,
     FIELD_VALVE_STATE,
     EntityDefinition,
     make_custom_entity,
@@ -44,6 +46,8 @@ HM_MODE_AUTO = "AUTO-MODE"
 HM_MODE_MANU = "MANU-MODE"
 HM_MODE_AWAY = "PARTY-MODE"
 HM_MODE_BOOST = "BOOST-MODE"
+
+HM_OFF_TEMPERATURE = 4.5
 
 HMIP_MODE_AUTO = 0
 HMIP_MODE_MANU = 1
@@ -107,6 +111,12 @@ class BaseClimateEntity(CustomEntity):
         self._e_temperature: HmSensor = self._get_entity(
             field_name=FIELD_TEMPERATURE, entity_type=HmSensor
         )
+        self._e_temperature_maximum: HmSensor = self._get_entity(
+            field_name=FIELD_TEMPERATURE_MAXIMUM, entity_type=HmSensor
+        )
+        self._e_temperature_minimum: HmSensor = self._get_entity(
+            field_name=FIELD_TEMPERATURE_MINIMUM, entity_type=HmSensor
+        )
 
     @property
     def temperature_unit(self) -> str:
@@ -116,11 +126,21 @@ class BaseClimateEntity(CustomEntity):
     @property
     def min_temp(self) -> float:
         """Return the minimum temperature."""
-        return self._e_setpoint.min
+        if self._e_temperature_minimum and self._e_temperature_minimum.value:
+            min_temp = float(self._e_temperature_minimum.value)
+        else:
+            min_temp = self._e_setpoint.min
+
+        if min_temp == HM_OFF_TEMPERATURE:
+            return min_temp + 0.5
+        return min_temp
+
 
     @property
     def max_temp(self) -> float:
         """Return the maximum temperature."""
+        if self._e_temperature_maximum and self._e_temperature_maximum.value:
+            return float(self._e_temperature_maximum.value)
         return self._e_setpoint.max
 
     @property
@@ -248,7 +268,7 @@ class CeRfThermostat(BaseClimateEntity):
     @property
     def hvac_mode(self) -> HmHvacMode:
         """Return hvac operation mode."""
-        if self.target_temperature and self.target_temperature <= self.min_temp:
+        if self.target_temperature and self.target_temperature <= HM_OFF_TEMPERATURE:
             return HmHvacMode.OFF
         if self._e_control_mode.value == HM_MODE_MANU:
             return HmHvacMode.HEAT
@@ -300,7 +320,7 @@ class CeRfThermostat(BaseClimateEntity):
             await self._e_manu_mode.send_value(self.current_temperature)
         elif hvac_mode == HmHvacMode.OFF:
             await self._e_manu_mode.send_value(self.current_temperature)
-            await self.set_temperature(temperature=self.min_temp)
+            await self.set_temperature(temperature=HM_OFF_TEMPERATURE)
         # if switching hvac_mode then disable boost_mode
         if self._e_boost_mode.value:
             await self.set_preset_mode(HmPresetMode.NONE)
@@ -369,7 +389,7 @@ class CeIpThermostat(BaseClimateEntity):
     @property
     def hvac_mode(self) -> HmHvacMode:
         """Return hvac operation mode."""
-        if self.target_temperature and self.target_temperature <= self.min_temp:
+        if self.target_temperature and self.target_temperature <= HM_OFF_TEMPERATURE:
             return HmHvacMode.OFF
         if self._e_set_point_mode.value == HMIP_MODE_MANU:
             return HmHvacMode.HEAT if self._is_heating_mode else HmHvacMode.COOL
@@ -422,7 +442,7 @@ class CeIpThermostat(BaseClimateEntity):
             await self._e_control_mode.send_value(HMIP_MODE_MANU)
         elif hvac_mode == HmHvacMode.OFF:
             await self._e_control_mode.send_value(HMIP_MODE_MANU)
-            await self.set_temperature(temperature=self.min_temp)
+            await self.set_temperature(temperature=HM_OFF_TEMPERATURE)
         # if switching hvac_mode then disable boost_mode
         if self._e_boost_mode.value:
             await self.set_preset_mode(HmPresetMode.NONE)
