@@ -2,6 +2,8 @@ Version 2022.10.7 (2022-10-8)
 - Accept some existing prefix for sysvars and programs to avoid additional prefixing with Sv_ / P_
   - accepted sysvar prefixes: V_, Sv_
   - accepted program prefixes: P_, Prg_
+- Read min/max temperature for climate devices
+- Min set temperature for thermostats is now 5.0 degree. 4.5. degree is only off
 
 Version 2022.10.6 (2022-10-15)
 - Replace data_* by HmDataOperationResult
